<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="a_activity_main_tv_title">My Nanodegree Apps!</string>
    <string name="a_activity_main_btn_spotify_streamer">Spotify Streamer</string>
    <string name="a_activity_main_btn_scores_app">Score App</string>
    <string name="a_activity_main_btn_library_app">Library App</string>
    <string name="a_activity_main_btn_build_it_bigger">Build It Bigger</string>
    <string name="a_activity_main_btn_xyz_reader">XYZ Reader</string>
    <string name="a_activity_main_btn_capstone">Capstone: My own app</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="a_activity_main_t_message">This button will launch my %s app</string>
    // just in case we need to change the button of above to something else that is not the app name,
    //like the capstone one.
    <string name="capstone">Capstone</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="library_app">Library</string>
    <string name="scores_app">Scores</string>
</resources>
