<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" tools:context=".MainActivity">

    <TextView android:text="@string/a_activity_main_tv_title" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/a_activity_main_tv_title_textsize"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/a_activity_main_tv_title_margin_bottom"
        />

    <Button
        android:id="@+id/a_activity_main_btn_spotify_streamer"
        android:layout_width="@dimen/a_activity_main_btn_apps_width"
        android:layout_height="@dimen/a_activity_main_btn_apps_height"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/a_activity_main_btn_spotify_streamer"
        android:background="@color/secondary"
        />
    <Button
        android:id="@+id/a_activity_main_btn_scores_app"
        android:layout_width="@dimen/a_activity_main_btn_apps_width"
        android:layout_height="@dimen/a_activity_main_btn_apps_height"
        android:layout_marginTop="@dimen/a_activity_main_btn_apps_margintop"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/a_activity_main_btn_scores_app"
        android:background="@color/secondary"
        />
    <Button
        android:id="@+id/a_activity_main_btn_library_app"
        android:layout_width="@dimen/a_activity_main_btn_apps_width"
        android:layout_height="@dimen/a_activity_main_btn_apps_height"
        android:layout_marginTop="@dimen/a_activity_main_btn_apps_margintop"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/a_activity_main_btn_library_app"
        android:background="@color/secondary"
        />
    <Button
        android:id="@+id/a_activity_main_btn_build_it_bigger"
        android:layout_width="@dimen/a_activity_main_btn_apps_width"
        android:layout_height="@dimen/a_activity_main_btn_apps_height"
        android:layout_marginTop="@dimen/a_activity_main_btn_apps_margintop"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/a_activity_main_btn_build_it_bigger"
        android:background="@color/secondary"
        />
    <Button
        android:id="@+id/a_activity_main_btn_xyz_reader"
        android:layout_width="@dimen/a_activity_main_btn_apps_width"
        android:layout_height="@dimen/a_activity_main_btn_apps_height"
        android:layout_marginTop="@dimen/a_activity_main_btn_apps_margintop"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/a_activity_main_btn_xyz_reader"
        android:background="@color/secondary"
        />
    <Button
        android:id="@+id/a_activity_main_btn_capstone"
        android:layout_width="@dimen/a_activity_main_btn_apps_width"
        android:layout_height="@dimen/a_activity_main_btn_apps_height"
        android:layout_marginTop="@dimen/a_activity_main_btn_apps_margintop"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/a_activity_main_btn_capstone"
        android:background="@color/primaryDark"
        />

</LinearLayout>
